# agent-starter

./: .env  LICENSE  Makefile  README.md  pyproject.toml
api/: main.py
src/agent_starter.egg-info/: PKG-INFO
src/agent_starter/core/: agent.py  llm.py  memory.py  schemas.py
src/agent_starter/tools/: web.py
tests/: test_agent.py
