[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-starter"
version = "0.1.0"
description = "Minimal single-agent framework with FastAPI + Ollama integration."
authors = [{ name = "Ben Scire", email = "ben@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "requests>=2.31.0",
    "pydantic>=2.7.0",
    "chromadb>=0.5.0",
    "numpy>=1.26.0",
    "pytest>=8.2.0",
    "ruff>=0.5.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true
exclude = ["**/agent_starter.egg-info/**"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM", "TID"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.per-file-ignores]
"src/agent_starter.egg-info/**/*" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
